updated wrt. java10 and KAD